[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "elang-gpt-apipython"
version = "1.0.0"
description = "Website Endpoint AI dengan Python dan Transformers"
authors = [{ name = "Elang GPT Developer", email = "email@example.com" }]
license = { text = "MIT" }
dependencies = [
    "transformers",
    "torch",
    "flask"
]

[project.scripts]
start = "python model.py"